docs/0.18.1/_sources/api/gammapy.modeling.models.LogParabolaNormSpectralModel.rst.txt
LogParabolaNormSpectralModel
============================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: LogParabolaNormSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~LogParabolaNormSpectralModel.alpha
      ~LogParabolaNormSpectralModel.beta
      ~LogParabolaNormSpectralModel.covariance
      ~LogParabolaNormSpectralModel.default_parameters
      ~LogParabolaNormSpectralModel.is_norm_spectral_model
      ~LogParabolaNormSpectralModel.norm
      ~LogParabolaNormSpectralModel.parameters
      ~LogParabolaNormSpectralModel.reference
      ~LogParabolaNormSpectralModel.tag
      ~LogParabolaNormSpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~LogParabolaNormSpectralModel.__call__
      ~LogParabolaNormSpectralModel.copy
      ~LogParabolaNormSpectralModel.create
      ~LogParabolaNormSpectralModel.energy_flux
      ~LogParabolaNormSpectralModel.energy_flux_error
      ~LogParabolaNormSpectralModel.evaluate
      ~LogParabolaNormSpectralModel.evaluate_error
      ~LogParabolaNormSpectralModel.from_dict
      ~LogParabolaNormSpectralModel.from_log10
      ~LogParabolaNormSpectralModel.from_parameters
      ~LogParabolaNormSpectralModel.integral
      ~LogParabolaNormSpectralModel.integral_error
      ~LogParabolaNormSpectralModel.inverse
      ~LogParabolaNormSpectralModel.plot
      ~LogParabolaNormSpectralModel.plot_error
      ~LogParabolaNormSpectralModel.spectral_index
      ~LogParabolaNormSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: alpha
   .. autoattribute:: beta
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: norm
   .. autoattribute:: parameters
   .. autoattribute:: reference
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_log10
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
